TinyLisp.Parser/TinyLispParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./TinyLisp.g4 by ANTLR 4.13.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.0")]
[System.CLSCompliant(false)]
public partial class TinyLispParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BooleanConstant=1, Number=2, ID=3, DoubleQuoteString=4, Quote=5, LeftPeren=6, 
		RightPeren=7, Comment=8, SPACE=9;
	public const int
		RULE_file = 0, RULE_list = 1, RULE_quotedList = 2, RULE_listItems = 3;
	public static readonly string[] ruleNames = {
		"file", "list", "quotedList", "listItems"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'''", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BooleanConstant", "Number", "ID", "DoubleQuoteString", "Quote", 
		"LeftPeren", "RightPeren", "Comment", "SPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TinyLisp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static TinyLispParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TinyLispParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TinyLispParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TinyLispParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ListContext[] list() {
			return GetRuleContexts<ListContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list(int i) {
			return GetRuleContext<ListContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyLispVisitor<TResult> typedVisitor = visitor as ITinyLispVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 11;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LeftPeren) {
				{
				{
				State = 8;
				list();
				}
				}
				State = 13;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 14;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftPeren() { return GetToken(TinyLispParser.LeftPeren, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightPeren() { return GetToken(TinyLispParser.RightPeren, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ListItemsContext[] listItems() {
			return GetRuleContexts<ListItemsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListItemsContext listItems(int i) {
			return GetRuleContext<ListItemsContext>(i);
		}
		public ListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.EnterList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.ExitList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyLispVisitor<TResult> typedVisitor = visitor as ITinyLispVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListContext list() {
		ListContext _localctx = new ListContext(Context, State);
		EnterRule(_localctx, 2, RULE_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16;
			Match(LeftPeren);
			State = 20;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 126L) != 0)) {
				{
				{
				State = 17;
				listItems();
				}
				}
				State = 22;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 23;
			Match(RightPeren);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuotedListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Quote() { return GetToken(TinyLispParser.Quote, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftPeren() { return GetToken(TinyLispParser.LeftPeren, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightPeren() { return GetToken(TinyLispParser.RightPeren, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ListItemsContext[] listItems() {
			return GetRuleContexts<ListItemsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListItemsContext listItems(int i) {
			return GetRuleContext<ListItemsContext>(i);
		}
		public QuotedListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quotedList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.EnterQuotedList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.ExitQuotedList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyLispVisitor<TResult> typedVisitor = visitor as ITinyLispVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuotedList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QuotedListContext quotedList() {
		QuotedListContext _localctx = new QuotedListContext(Context, State);
		EnterRule(_localctx, 4, RULE_quotedList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			Match(Quote);
			State = 26;
			Match(LeftPeren);
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 126L) != 0)) {
				{
				{
				State = 27;
				listItems();
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 33;
			Match(RightPeren);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListItemsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BooleanConstant() { return GetToken(TinyLispParser.BooleanConstant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Number() { return GetToken(TinyLispParser.Number, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(TinyLispParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DoubleQuoteString() { return GetToken(TinyLispParser.DoubleQuoteString, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public QuotedListContext quotedList() {
			return GetRuleContext<QuotedListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		public ListItemsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listItems; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.EnterListItems(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITinyLispListener typedListener = listener as ITinyLispListener;
			if (typedListener != null) typedListener.ExitListItems(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyLispVisitor<TResult> typedVisitor = visitor as ITinyLispVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListItems(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListItemsContext listItems() {
		ListItemsContext _localctx = new ListItemsContext(Context, State);
		EnterRule(_localctx, 6, RULE_listItems);
		try {
			State = 41;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BooleanConstant:
				EnterOuterAlt(_localctx, 1);
				{
				State = 35;
				Match(BooleanConstant);
				}
				break;
			case Number:
				EnterOuterAlt(_localctx, 2);
				{
				State = 36;
				Match(Number);
				}
				break;
			case ID:
				EnterOuterAlt(_localctx, 3);
				{
				State = 37;
				Match(ID);
				}
				break;
			case DoubleQuoteString:
				EnterOuterAlt(_localctx, 4);
				{
				State = 38;
				Match(DoubleQuoteString);
				}
				break;
			case Quote:
				EnterOuterAlt(_localctx, 5);
				{
				State = 39;
				quotedList();
				}
				break;
			case LeftPeren:
				EnterOuterAlt(_localctx, 6);
				{
				State = 40;
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
